<resources>
    <string name="app_name">CUHM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_app_setting">App Setting</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="user_email_label">Email</string>
    <string name="user_phone_label">Phone</string>
    <string name="user_address_label">Address</string>
    <string name="user_job_label">Job</string>
    <string name="hint_dob">Enter Age</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="btn_link_signup">Register</string>
    <string name="show_email_in_navigation">mono@gmail.com</string>
    <string name="username_in_navigation">MONO</string>
    <string name="blank_fragment">Blank Fragment</string>
    <string name="contact_list">Contact List</string>
    <string name="notification">Notification</string>
    <string name="could_you_help_me">Could You Help Me..!?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="update_image">Update Image</string>
    <string name="user_name">User Name</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="settings">settings</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_main_drower_group1_home">Home</string>
    <string name="menu_main_drower_group1_profile">Profile</string>
    <string name="menu_main_drower_group1_contact_list">Contact List</string>
    <string name="menu_main_drower_group2_appSetting">App Settings</string>
    <string name="menu_main_drower_group2_notificatio_setting">Notification Setting</string>
    <string name="menu_main_drower_group2_terms_policies">Terms &amp; Policies</string>
    <string name="menu_main_drower_group2_contactUs">Contact Us</string>
    <string name="menu_main_drower_group2_about">About</string>
    <string name="menu_main_drower_group2_LogOut">Log Out</string>
    <string name="menu_main_action_profile">Profile</string>
    <string name="menu_main_app_setting">Settings</string>
    <string name="menu_main_btnsignout">SignOut</string>
    <string name="edit_provile_Act_update_image">update_image</string>
    <string name="edit_provile_Act_first_name">First Name</string>
    <string name="edit_provile_Act_last_name">Last Name</string>
    <string name="edit_provile_Act_email">Email</string>
    <string name="edit_provile_Act_phone">Phone</string>
    <string name="edit_provile_Act_address">Address</string>
    <string name="edit_provile_Act_job">Job</string>
    <string name="edit_provile_Act_save_changes">save_changes</string>
    <string name="forget_password_Act_email">Enter Your E-mail</string>
    <string name="forget_password_Act_send">Send</string>
    <string name="login_Act_hint_email">Email</string>
    <string name="login_Act_hint_password">Password</string>
    <string name="login_Act_btn_login">Login</string>
    <string name="login_Act_btn_link_signup">Register</string>
    <string name="login_Act_forgetPassword">IF YOU FORGET PASSWORD</string>
    <string name="login_Act_click">click here</string>
    <string name="profile_Act_image_discription">profile image</string>
    <string name="profile_Act_profile_name">dispaly_profile_name</string>
    <string name="profile_Act_current_user_job">current_user_job</string>
    <string name="register_Act_Fname">First Name</string>
    <string name="register_Act_Lname">Last Name</string>
    <string name="register_Act_hint_email">email</string>
    <string name="register_Act_hint_password">password</string>
    <string name="register_Act_hint_Confpassword">Confirm Password</string>
    <string name="register_Act_hint_job">Job</string>
    <string name="register_Act_hint_phone">Phone</string>
    <string name="register_Act_hint_Address">Address</string>
    <string name="register_Act_gender">Gender</string>
    <string name="register_Act_male">Male</string>
    <string name="register_Act_female">Female</string>
    <string name="register_Act_btn_sign_up">Register !!</string>
    <string name="register_Act_btn_link_login">Already have an account Login !!</string>
    <string name="send_notification_Act_Send_to_all">Send to all</string>
    <string name="send_notification_Act_Send_to_one">Send to one</string>
    <string name="send_notification_Act_hint_message_title"> Enter Message Title</string>
    <string name="send_notification_Act_hint_message">Enter Message</string>
    <string name="send_notification_Act_hint_image_URL">Enter Image URL (Optional)</string>
    <string name="send_notification_Act_btn_send">Send</string>
    <string name="splash_Act_welcome_caption">CUHM !!</string>
    <string name="splash_Act_welcome_text"> Way to Help Others </string>
    <string name="emergency_Act_ambulance">Ambulance</string>
    <string name="emergency_Act_fire">Fire</string>
    <string name="emergency_Act_police">Police</string>
    <string name="emergency_Act_app_support">APP Support</string>
    <string name="emergency_Act_btn5">Button 5</string>
    <string name="emergency_Act_btn6">Button 6</string>
    <string-array name="reqHelp_Act_problemCategories">
        <item>Choose a problem…</item>
        <item>Fire</item>
        <item>Traffic</item>
        <item>Education</item>
        <item>Medical</item>
        <item>Daily Problems</item>
    </string-array>
    <string name="reqHelp_Act_write_desc">Write Description</string>
    <string name="about_us_frag_write_desc">write description</string>
    <string name="app_setting_frag_app_settings">App Settings</string>
    <string name="contact_us_frag_hint_user_name">Name</string>
    <string name="contact_us_frag_hint_email"> E-mail</string>
    <string name="contact_us_frag_hint_message">Enter your message</string>
    <string name="contact_us_frag_reset">Reset</string>
    <string name="contact_us_frag_send">Send</string>
    <string name="home_frag_emergency">Emergency</string>
    <string name="home_frag_request_help">Request Help</string>
    <string name="home_frag_send_notification">Send Notification</string>
    <string name="notification_setting_frag_notification_settings">Notification Settings</string>
    <string name="profile_frag_Fname">First Name</string>
    <string name="profile_frag_location">Location</string>
    <string name="profile_frag_Lname">Last Name</string>
    <string name="profile_frag_curr_location">current Location</string>
    <string name="profile_frag_near_helper"> Near By Helper</string>
    <string name="profile_frag_email"> E-mail</string>
    <string name="profile_frag_phone"> Phone</string>
    <string name="profile_frag_address"> address</string>
    <string name="profile_frag_job"> job</string>
    <string name="terms_and_policies_frag_terms_and_policies">Terms And Policies</string>
    <string name="nav_header_android_studio">Android Studio</string>
    <string name="nav_header_android_studio_email">android.studio@android.com</string>
    <string name="notification_list_user_name">User Name</string>
    <string name="notification_list_problem">Problem</string>
    <string name="notification_list_description">description</string>
    <string name="users_layout_users_name">users_name</string>
    <string name="users_layout_users_status">Job</string>
    <string name="edit_button">edit button</string>
</resources>