<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_main_drower_group1_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_main_drower_group1_profile" />
        <item
            android:id="@+id/nav_contactList"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_main_drower_group1_contact_list" />
    </group>

    <item android:title="Help &amp; Setting">

        <menu >
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_AppSetting"
                    android:icon="@drawable/ic_settings_applications_black_24dp"
                    android:title="@string/menu_main_drower_group2_appSetting" />
                <item
                    android:id="@+id/nav_notifSetting"
                    android:icon="@drawable/ic_notifications_none_black_24dp"
                    android:title="@string/menu_main_drower_group2_notificatio_setting" />
                <item
                    android:id="@+id/nav_Termspolicies"
                    android:icon="@drawable/ic_warning_black_24dp"
                    android:title="@string/menu_main_drower_group2_terms_policies" />
                <item
                    android:id="@+id/nav_contactUs"
                    android:icon="@drawable/ic_contact_mail_black_24dp"
                    android:title="@string/menu_main_drower_group2_contactUs" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/menu_main_drower_group2_about" />
                <item
                    android:id="@+id/nav_LogOut"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_main_drower_group2_LogOut" />
            </group>
        </menu>
    </item>
    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
