<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_send_push_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fci.steps.cuhm.ActivitySendPushNotification">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonSendAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_notification_Act_Send_to_all" />

        <RadioButton
            android:id="@+id/radioButtonSendOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_notification_Act_Send_to_one" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_notification_Act_hint_message_title" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_notification_Act_hint_message" />

    <EditText
        android:id="@+id/editTextImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_notification_Act_hint_image_URL" />

    <Button
        android:id="@+id/buttonSendPush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_notification_Act_btn_send" />

</LinearLayout>
