<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mCard_view"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:layout_margin="@dimen/card_margin"
    android:elevation="3dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/users_profile"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/users_profile"
            android:orientation="vertical">

            <TextView
                android:id="@+id/users_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/notification_list_user_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/notification_list_problem" />

            <TextView
                android:id="@+id/description_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_list_description" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>